@@ -1,3 +1,7 @@
+2008-10-22  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/CSharpAmbience.cs: C# ambience can now print instantiated types.
+
 2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* templates/AssemblyInfo.xft.xml: Use an AssemblyVersion that'll build
